--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,9 +1,16 @@
 <html>
   <head>
     <title>Home Inventory</title>
+    <link rel="stylesheet" href="/css/lib.css" />
+    <link rel="stylesheet" href="/css/app.css" />
   </head>
   <body>
-    <div id="content"></div>
+    <div class="container">
+      <header>Inventory</header>
+    </div>
+    <div class="container">
+      <div id="content"></div>
+    </div>
     <script type="text/javascript" src="/js/lib.js"></script>
     <script type="text/javascript" src="/js/app.js"></script>
     <script type="text/javascript">
