--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -5,9 +5,13 @@
     <link rel="stylesheet" href="/css/app.css" />
   </head>
   <body>
-    <div class="container">
-      <header>Inventory</header>
-    </div>
+    <nav>
+      <div class="container">
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo">Inventory</a>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <div id="content"></div>
     </div>
