--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Home Inventory</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="/css/lib.css" />
     <link rel="stylesheet" href="/css/app.css" />
   </head>
